Integrate socket.io for real-time updates, update environment variables, and refactor component imports; adjust animation translations in Home page

--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,1 +1,2 @@
-VITE_BASE_URL = http://localhost:4000
+VITE_BASE_URL = https://uber-clone-backend-7o5c.onrender.com
+VITE_GOOGLE_MAPS_API_KEY = AIzaSyCEw-3dLVA5wwzVUc8JyG0tlQPIMGiCySs
